# code-demo-slides

./: .gitignore  README.md
demo-slides/: README.md  process_html.py  pyproject.toml  rise.css  slides.ipynb
java/: README.md  pyproject.toml  slides.ipynb  unzip_url.py
nodejs/: README.md  package-lock.json  package.json  pyproject.toml  slides.ipynb
python/: README.md  pyproject.toml  slides.ipynb
python-project/: README.md  pyproject.toml  slides.ipynb
slides-only/: README.ipynb  README.md  pyproject.toml  rise.css  slides.ipynb
